# TrainDetector

./: .gitignore  CMakeLists.txt  platformio.ini
lib/traindetector/: CMakeLists.txt  debouncer.cpp  debouncer.h  enums.h  traindetection.cpp  traindetection.h  traindetector.h
src/: main.cpp
traindetector/: traindetection.cpp
